--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
           ./kry build-deps
 
   deploy:
+    env:
+      space_token: ${{ secrets.SPACE_ACCESS_TOKEN }}
+      space_id: ${{ vars.SPACE_ID }}
     needs: build
     name: deploy to deta space
     runs-on: ubuntu-latest
@@ -34,4 +37,4 @@ jobs:
       uses: lizheming/deta-action@master
       with:
         access_token: ${{ secrets.SPACE_ACCESS_TOKEN }}
-        id: ${{ secrets.SPACE_ID }}
+        id: ${{ vars.SPACE_ID }}
