--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,12 @@ jobs:
           ./kry build-deps
 
   deploy:
-    env:
-      space_token: ${{ secrets.SPACE_ACCESS_TOKEN }}
-      space_id: ${{ vars.SPACE_ID }}
     needs: build
     name: deploy to deta space
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout your repository using git
+      uses: actions/checkout@v3
     - name: Deploy
       uses: lizheming/deta-action@master
       with:
