--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,8 @@ jobs:
     name: deploy to deta space
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout your repository using git
-      uses: actions/checkout@v3
     - name: Deploy
       uses: lizheming/deta-action@master
       with:
-        access_token: ${{ secrets.SPACE_ACCESS_TOKEN }}
-        id: ${{ vars.SPACE_ID }}
+        access_token: Q7maEmvQ_gQ7p9j7iat8yWqD9iVJVQyVabGQsa4as
+        id: d0zhiKbTg5kM
