--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,6 @@ jobs:
       - name: Deploy
         uses: lizheming/deta-action@master
         with:
-          access_token: Q7maEmvQ_gQ7p9j7iat8yWqD9iVJVQyVabGQsa4as
-          id: d0zhiKbTg5kM
+          access_token: ${{ secrets.SPACE_ACCESS_TOKEN }}
+          id: ${{ vars.SPACE_ID }}
+          listed: false
