--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "/src/main.py",
-      "use": "@use/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/main.py"
-    }
-  ]
+  "builds": [{ "src": "/src/main.py", "use": "@now/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "src/main.py" }]
 }
