--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
-  "builds": [{ "src": "/src/main.py", "use": "@now/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "src/main.py" }]
+  "builds": [
+    {
+      "src": "/src/main.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/main.py"
+    }
+  ]
 }
