--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.2.5",
+    "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/kit": "^2.7.0",
     "@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
     "prettier": "^3.3.3",
@@ -22,5 +22,8 @@
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@picocss/pico": "^2.0.6"
+  }
 }
