--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/kit": "^2.7.0",
     "@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
+    "@types/node": "^22.7.5",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
     "svelte": "5.0.0-next.264",
@@ -24,6 +25,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fontsource/roboto": "^5.1.0",
     "@picocss/pico": "^2.0.6"
   }
 }
