--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
-    "@types/node": "^22.10.1",
-    "prettier": "^3.4.1",
+    "@sveltejs/kit": "^2.13.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/node": "^22.10.2",
+    "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
-    "svelte": "5.0.0-next.264",
+    "svelte": "^5.14.5",
     "svelte-check": "^4.1.1",
     "typescript": "^5.7.2",
-    "vite": "^5.4.11"
+    "vite": "^6.0.4"
   },
   "type": "module",
   "dependencies": {
